Fairly mechanical upgrade to SDK